# nomen-nescio

./: .env.example  .gitignore  Cargo.toml  README.md  dfx.json  package.json
ai/: app.py  test.py  training-signature_verification.ipynb
ai/service/: api_service.py  image_processor.py  interfaces.py  signature_model.py
data_backend/: .env.example  Cargo.toml
data_backend/api/: Cargo.toml
data_backend/api/src/: lib.rs
data_backend/api/src/config/: api_config.rs  mod.rs
data_backend/api/src/models/: encryptor.rs  mod.rs  response.rs  user.rs  user_header.rs
data_backend/api/src/models/request/: add_group_member.rs  create_email.rs  create_group.rs  create_user.rs  image_predict.rs  login_user.rs  member_data.rs  mod.rs  signature_prediction_data.rs
data_backend/api/src/models/response/: response.rs
data_backend/api/src/routes/: email_routes.rs  file_routes.rs  group_routes.rs  image_routes.rs  mod.rs  user_routes.rs
data_backend/entity/: Cargo.toml
data_backend/entity/src/: email.rs  email_file.rs  group.rs  group_member.rs  lib.rs  mod.rs  prelude.rs  receiver.rs  user.rs
data_backend/migration/src/: lib.rs  m20241114_110446_create_user_table.rs  m20241115_033847_create_table_group.rs  m20241115_033855_create_table_group_members.rs  m20241118_002751_create_table_email.rs  m20241118_002917_create_table_email_receivers.rs  m20241118_002922_create_table_files.rs
data_backend/service/: Cargo.toml
data_backend/service/src/: lib.rs
data_backend/service/src/email/: mod.rs  mutation.rs  query.rs
data_backend/service/src/group/: mutation.rs  query.rs
data_backend/service/src/user/: mod.rs  mutation.rs  query.rs
data_backend/src/: main.rs
data_backend/src/facade/: mod.rs
src/nomennescio_backend/: Cargo.toml  nomennescio_backend.did
src/nomennescio_backend/src/: lib.rs
src/nomennescio_frontend/: index.html  package.json
src/nomennescio_frontend/src/: App.tsx  index.scss  main.tsx  styles.css
src/nomennescio_frontend/src/agent/: agent.ts
src/nomennescio_frontend/src/components/: GroupMembers.tsx
src/nomennescio_frontend/src/constants/: image-constants.ts
src/nomennescio_frontend/src/context/: user-context.tsx
src/nomennescio_frontend/src/hooks/: use-alert.tsx  use-authentication-form.tsx  use-authentication-words.tsx  use-drag-and-drop.tsx  use-drawable-canvas.tsx  use-fetch-user.tsx  use-file-action.tsx  use-file-upload.tsx  use-get-current-user.tsx  use-get-email.tsx  use-get-profile-source.tsx  use-get-user-group.ts  use-get-users-with-filter.ts  use-group.tsx  use-password-strength.tsx  use-password-visibility.tsx  use-search-dropdown.tsx
src/nomennescio_frontend/src/interfaces/: add-group-member.d.ts  alert-interface.d.ts  (+9 more)
(+49 files in other folders)
