[package]
name = "data_backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-async-std-native-tls",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
