[package]
name = "data_backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "api", "entity", "migration", "service"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
service = { path = "service" }
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde="1.0" # Serialization
serde_json = "1.0" # JSON serialization
rsa = "0.9.0" # Encryption
rand = "0.8"
