[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
service = { path = "../service" }
rocket = "0.5.1"
tokio = "1.29.0"
orion = "0.17.7"
chrono = "0.4.38"
rand_core = { version = "0.6.4", features = ["getrandom"] }
sea-orm = { version = "1.1.0", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
async-trait = { version = "0.1" }
dotenv = "0.15"
serde_json = "1.0"
