[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
service = { path = "../service" }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.29.0"
orion = "0.17.7"
chrono = "0.4.38"
rand_core = { version = "0.6.4", features = ["getrandom"] }
sea-orm = { version = "1.1.0", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
async-trait = { version = "0.1" }
dotenv = "0.15"
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
reqwest = { version = "0.12.9", features = ["json"] }
base64 = "0.22.1"
