[package]
name = "nomennescio_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10"
ic-cdk-macros = "0.16"
cmake = "0.1.51"
sha2 = "0.10"
uuid = { version = "1.11", features = ["v5"] }